<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">

    <!-- display welcome message to user-->
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_message_textView"
        android:visibility="visible"/>

    <!-- display a question for user-->
    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/question_textView"
        android:visibility="visible"/>

    <!-- display a button to redirect users to their courses -->
    <Button
        android:id="@+id/courseBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/gradeBtnId"
        android:layout_marginStart="22dp"
        android:text="@string/courses_button"
        android:visibility="visible" />

    <!-- display a button to redirect users to their grades -->
    <Button
        android:id="@+id/gradeBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/grades_button"
        android:visibility="visible"/>

    <!-- display a button to redirect users to the campuses maps -->
    <Button
        android:id="@+id/mapBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/courseBtnId"
        android:layout_marginEnd="28dp"
        android:text="@string/maps_button"
        android:visibility="visible" />

    <!-- display a button to redirect users to the notepad -->
    <Button
        android:id="@+id/noteBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emailBtnId"
        android:layout_centerHorizontal="true"
        android:text="@string/notes_button"
        android:visibility="visible" />

    <!-- display a button to redirect users to their email -->
    <Button
        android:id="@+id/emailBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/courseBtnId"
        android:layout_marginTop="173dp"
        android:text="@string/email_button" />

    <!-- display a button to redirect users to their calendar -->
    <Button
        android:id="@+id/calendarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mapBtnId"
        android:layout_alignTop="@+id/noteBtnId"
        android:text="@string/calendar_button_text" />

    <!-- display a button to redirect users to the login page to logout -->
    <Button
        android:id="@+id/logoutBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="213dp"
        android:text="@string/logout_button_text" />

</RelativeLayout>